--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.203", features = ["serde_derive"] }
+strum = { version = "0.26.3", features = ["derive"] }
 toml = "0.8.14"
 z3 = "0.12.1"
